k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-svc
  namespace: netflix
spec:
  selector:
    app: netflix-clone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
